--- a/index.html
+++ b/index.html
@@ -4,11 +4,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Weather App</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
-    <script src="script.js"></script>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h1 id="city">Middletown, OH</h1>
+          <div class="current-weather-icon">🌨️</div>
+        </div>
+
+        <div class="col-6">
+          <form class="search-box">
+            <input
+              type="search"
+              id="search-city"
+              placeholder="Enter city"
+              autofocus
+              autocomplete="off"
+            />
+            <input type="submit" id="search-button" value="Search" />
+          </form>
+          <button id="location-button">Current Location</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <h2 class="current-temperature">Currently 28°F</h2>
+
+          <h3 class="current-low-high">19°F / 32°F</h3>
+        </div>
+
+        <div class="col-6">
+          <h3 id="todays-date">Friday</h3>
+          <h3>Snow</h3>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col days">
+          Saturday
+          <div class="weather-icons">🌦️</div>
+          <div>39°/46°</div>
+        </div>
+        <div class="col days">
+          Sunday
+          <div class="weather-icons">🌤️</div>
+          <div>39°/46°</div>
+        </div>
+        <div class="col days">
+          Monday
+          <div class="weather-icons">🌥️</div>
+          <div>39°/46°</div>
+        </div>
+        <div class="col days">
+          Tuesday
+          <div class="weather-icons">☀️</div>
+          <div>39°/46°</div>
+        </div>
+        <div class="col days">
+          Wednesday
+          <div class="weather-icons">☀️</div>
+          <div>39°/46°</div>
+        </div>
+      </div>
+    </div>
+    <script src="src/script.js"></script>
   </body>
 </html>
