--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="container footer">
+        <a
+          href="https://github.com/rookiebehaviour/weather-app"
+          target="_blank"
+          rel="noreferrer"
+          >Open-source code</a
+        >
+        by Jacqueline ❤️ Mason
+      </div>
+    </footer>
+
     <script src="src/script.js"></script>
   </body>
 </html>
