Updated footer from footer element to small

--- a/index.html
+++ b/index.html
@@ -78,17 +78,15 @@
         </div>
       </div>
     </div>
-    <footer>
-      <div class="container footer">
-        <a
-          href="https://github.com/rookiebehaviour/weather-app"
-          target="_blank"
-          rel="noreferrer"
-          >Open-source code</a
-        >
-        by Jacqueline ❤️ Mason
-      </div>
-    </footer>
+    <small class="container footer">
+      <a
+        href="https://github.com/rookiebehaviour/weather-app"
+        target="_blank"
+        rel="noreferrer"
+        >Open-source code</a
+      >
+      by Jacqueline ❤️ Mason
+    </small>
 
     <script src="src/script.js"></script>
   </body>
